[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "setuptools", "build"]
build-backend = "setuptools.build_meta"

[tool.jupyter-packaging.options]
skip-if-exists = ["tiledb-prompt-options/labextension/static/style.js"]
ensured-targets = ["tiledb-prompt-options/labextension/static/style.js", "tiledb-prompt-options/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["tiledb-prompt-options/labextension/**", "yarn.lock", ".*", "package-lock.json"]